fix a bit the layout on mobile

--- a/sass/juice.scss
+++ b/sass/juice.scss
@@ -125,7 +125,7 @@ main {
   position: -moz-sticky;
   position: -ms-sticky;
   position: -o-sticky;
-  top: 10px;
+  top: 75px;
   padding: 10px 0 20px;
   max-height: 100vh;
   overflow: auto;
